[package]
name = "goingmerry"
version = "0.1.0"
authors = ["Andy Lee <a.lee.intl@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6"

[build-dependencies]
slint-build = "1.6"

[package.metadata.packager]
before-packaging-command = "cargo build --release"
product-name = "Goingmerry"
identifier = "com.alee.goingmerry"
resources = ["Cargo.toml", "src", "128x128.png"]
icons = ["128x128.png"]
